I restructured the layout to avoid collapsing when changing the size of the window. Additionally, I added the linear-gradient property to the BigPic button which disabled the hover and active function on this button, I couldn't find the reason for this. Also, I couldn't change the link path from relative to absolute in the css files, somehow it worked different than in the html file.

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -42,6 +42,10 @@ button {
     font-family: Poppins-Light;
     font-size: 11px;
     color: white;
+    box-shadow: 0px 1px 2px rgba(0,0,0,0.1), 
+            0px 2px 4px rgba(0,0,0,0.1), 
+            0px 4px 8px rgba(0,0,0,0.1), 
+            0px 8px 16px rgba(0,0,0,0.1);
 }
 
 body button:hover {
@@ -52,23 +56,22 @@ body button:active {
     background-color: #22234e;
 }
 
+.RollDownMenus button {
+    height: 30px;
+    background-color: #16a9e8;
+}
+
+.BigPic button {
+    height: 40px;
+    background: linear-gradient(to left, #167aa4, #16a9e8);
+}
+
 .BlueInfo button {
     height: 30px;
     margin-top: 15px;
     background-color: rgba(0, 0, 0, 0);
     border-color: white;
     color: white;
-}
-
-.BigPic button {
-    height: 40px;
-    background-color: #16a9e8;
-}
-
-.RollDownMenus button {
-    height: 30px;
-    background-color: #16a9e8;
-    margin-right: 100px;
 }
 
 .SocialMedia a {
