--- a/src/styles/styles-wide.css
+++ b/src/styles/styles-wide.css
@@ -3,44 +3,51 @@ html{
 }
 
 body {
+    width: 100%;
+    min-width: 1400px;
     min-height: 100vh;
-    margin: 0;
-    position: relative;
+    margin: auto;
     font-family: Poppins-Light;
     font-size: 11px;
 }
 
-div.container {
-    width: 60%;
-    min-width: 1400px;
-    margin: auto;
+.ContactInfo {
+    height: 30px;
+    background-color: rgb(229, 243, 243);
+    display: flex;
+    justify-content: center;
 }
 
-.ContactInfo {
-    box-sizing: border-box;
-    height: 30px;
-    width: 100%;
-    min-width: 1400px;
-    background-color: rgb(229, 243, 243);
+div.HeaderCollector {
+    width: 50%;
     display: flex;
     justify-content: space-between;
 }
 
 .SocialMedia {
+    float: left;
     display: flex;
     align-items: center;
 }
 
 .EmailandPhone {
+    float: right;
+    display: flex;
     align-items: center;
     gap: 10px;
-    padding-right: 100px;
 }
 
 .RollDownMenus {
-    box-sizing: border-box;
-    width: 100%;
     height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div.MenuCollector {
+    height: inherit;
+    width: 50%;
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -51,11 +58,14 @@ div.container {
 }
 
 .BigPic {
-    width: 100%;
-    min-width: 1200px;
-    height: 350px;
-    box-sizing: border-box;
-    background-image: url('../images/header-background.webp'); 
+    height: 400px;
+    background-image: url(../images/header-background.webp); 
+    display: flex;
+    justify-content: center;
+}
+
+div.BigPicCollector {
+    width: 50%;
 }
 
 .BigPic h1 {
@@ -68,31 +78,22 @@ div.container {
     font-size: 44px;
 }
 
-.BigPic section {
-    width: 340px;
-}
-
 .BlueInfo {
-    width: 100%;
     height: 200px;
     display: flex;
-    box-sizing: border-box;
+    justify-content: center;
     background-color: rgb(60, 190, 220);
     color: white;
 }
 
 .BlueInfo div {
-    width: 33%;
+    width: 16.66%;
     box-sizing: border-box;
     padding: 25px 10px 25px 10px;
 }
 
 .BlueInfo h3 {
     margin: 15px 0 10px 0;
-}
-
-.BlueInfo p {
-    margin: 0;
 }
 
 .BlueInfo .EmergencyCare {
